--- a/src/style/_dashboard.scss
+++ b/src/style/_dashboard.scss
@@ -25,5 +25,27 @@ $widgetMargin: 1rem;
 	.widget-contents-body {
 	  padding: 1rem;
 	}
+
+	.widget-error{
+	  padding: 2rem;
+	  background-color: $error;
+	  color: White;
+	  text-align: center;
+
+	  .widget-error-message{
+		display: inline-block;
+		max-width: 500px;
+		font-size: 1.2rem;
+		text-align: left;
+	  }
+
+	  .widget-error-message-status{
+		margin-top: 1rem;
+
+		label{
+		  font-weight: bold;
+		}
+	  }
+	}
   }
 }
