Added highlighting for current active nav. Moved app nav to component.

--- a/src/style/_main-nav.scss
+++ b/src/style/_main-nav.scss
@@ -8,5 +8,10 @@
 	text-decoration: none;
 	display: inline-block;
 	padding: .5rem 1rem;
+
+	  &.router-link-active{
+		  background: $secondary-color;
+		  cursor: default;
+	  }
   }
 }
