--- a/src/style/style.css
+++ b/src/style/style.css
@@ -61,6 +61,9 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     display: inline-block;
     padding: .5rem 1rem; }
+    .main-nav a.router-link-active {
+      background: #FF1753;
+      cursor: default; }
 
 .bars-chart ul {
   list-style: none;
