Using a map for colors in scss

--- a/src/style/_dashboard.scss
+++ b/src/style/_dashboard.scss
@@ -28,7 +28,7 @@ $widgetMargin: 1rem;
 
 	.widget-error{
 	  padding: 2rem;
-	  background-color: $error;
+	  background-color: color(error);
 	  color: White;
 	  text-align: center;
 
