--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -1,1 +1,72 @@
 $dashboardBackground: #D9DDE0;
+
+$colors: (
+		error: #cc3a3a,
+		warning: #ffd144,
+
+		primary: #0097c8,
+		primary-hover: rgba(233, 242, 247, 0.36),
+		primary-light: #38c7d4,
+		primary-dark-background: #6ADBFF,
+		primary-dark: #2F539C,
+		primary-100: #e9f2f7,
+		primary-500: #0072bc,
+		primary-400: #068db9,
+		primary-200: #DFE4E8,
+
+		secondary: #FF1753,
+
+		gray-100: #f5f5f5,
+		gray-200: #dcdcdc,
+		gray-500: #9E9E9E,
+		gray-700: #616161,
+		gray-900: #333333,
+
+		light-very-low-opacity: rgba(255, 255, 255, .12),
+		light-low-opacity: rgba(255, 255, 255, .4),
+		light-medium-low-opacity: rgba(255, 255, 255, .54),
+		light-medium-opacity: rgba(255, 255, 255, .76),
+		light-high-opacity: rgba(255, 255, 255, .87),
+
+		dark-low-opacity: rgba(0, 0, 0, .4),
+		dark-very-low-opacity: rgba(0, 0, 0, .12),
+		dark-medium-low-opacity: rgba(0, 0, 0, .54),
+		dark-medium-opacity: rgba(0, 0, 0, .76),
+		dark-high-opacity: rgba(0, 0, 0, .87),
+);
+
+
+@function color($key) {
+	@if map-has-key($colors, $key) {
+		@return map-get($colors, $key);
+	}
+
+	@warn "Unknown `#{$key}` in $colors.";
+	@return null;
+}
+
+@function get-text-color($backgroundColor) {
+	@if (lightness($backgroundColor) > 60) {
+		@return color(dark-high-opacity);
+	} @else {
+		@return White;
+	}
+}
+
+@each $name, $color in $colors {
+	.dashboard-color-#{$name} {
+		color: $color;
+	}
+
+	.dashboard-background-color-#{$name} {
+		background-color: $color;
+		color: get-text-color($color);
+
+		&.btn, &.object-link {
+			&:hover, &:focus {
+				background-color: darken($color, 10%);
+				color: White;
+			}
+		}
+	}
+}
