--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,36 +1,2 @@
-$divider-border: solid 1px rgba(0,0,0,.12);
-
-$error: #cc3a3a;
-$primary-color: #0097c8;
-$primary-color-hover: rgba(233, 242, 247, 0.36);
-$primary-color-light: #38c7d4;
-$primary-color-dark-background: #6ADBFF;
-$primary-color-dark: #2F539C;
-$primary-color-100: #e9f2f7;
-$primary-color-500: #0072bc;
-$primary-color-400: #068db9;
-$primary-color-200: #DFE4E8;
-
-/* $secondary-color: #F6FF00; */
-$secondary-color: #FF1753;
-
-$gray-100: #f5f5f5;
-$gray-200: #dcdcdc;
-$gray-500: #9E9E9E;
-$gray-700: #616161;
-$gray-900: #333333;
-
-$light-very-low-opacity: rgba(255,255,255,.12);
-$light-low-opacity: rgba(255,255,255,.4);
-$light-medium-low-opacity: rgba(255,255,255,.54);
-$light-medium-opacity: rgba(255,255,255,.76);
-$light-high-opacity: rgba(255,255,255,.87);
-
-$dark-low-opacity: rgba(0,0,0,.4);
-$dark-very-low-opacity: rgba(0,0,0,.12);
-$dark-medium-low-opacity: rgba(0,0,0,.54);
-$dark-medium-opacity: rgba(0,0,0,.76);
-$dark-high-opacity: rgba(0,0,0,.87);
-
-$divider-border: 1px solid $dark-very-low-opacity;
-$light-divider-border: 1px solid $light-very-low-opacity;
+$divider-border: 1px solid color(dark-very-low-opacity);
+$light-divider-border: 1px solid color(light-very-low-opacity);
